blog under completion stage